--- a/Social-network/src/App.css
+++ b/Social-network/src/App.css
@@ -1,38 +1,50 @@
-.App {
-  text-align: center;
+.page {
+  display: grid;
+  width: 100%;
+  max-width: 1200px;
+  margin:0 auto;
+  height: 700px;
+  grid-template-areas:
+    "head head"
+    "nav  main"
+    "nav  foot";
+  grid-template-rows: 60px 1fr 30px;
+  grid-template-columns: 150px 1fr;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.page > header {
+  grid-area: head;
+  background-color: #8ca0ff;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.header img {
+  width: 60px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.page > nav {
+  grid-area: nav;
+  background-color: #ffa08c;
+}
+
+.page > main {
+  grid-area: main;
+  background-color: #ffff64;
+}
+
+.picture {
+  width: 100%;
+  height: 250px;
+}
+
+.avatar {
+  max-width: 100%;
+}
+
+.avatar-info {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.page > footer {
+  grid-area: foot;
+  background-color: #ec360d;
 }
