--- a/Social-network/src/App.css
+++ b/Social-network/src/App.css
@@ -11,3 +11,9 @@
   grid-template-rows: 60px 1fr 30px;
   grid-template-columns: 150px 1fr;
 };
+
+.main {
+  grid-area: main;
+  background-color: #ffff64;
+  /* box-sizing: border-box; */
+}
