--- a/Social-network/src/components/Nav/Nav.module.css
+++ b/Social-network/src/components/Nav/Nav.module.css
@@ -6,13 +6,12 @@
   ul {
     list-style-type: none;
   }
-
-  .link.active a {
-    color: #f40808;
-  }
-
+  
   .link a {
     color: aliceblue;
     text-decoration: none;
+  }
+  .link [aria-current="page"] {
+    color: gold;
   }
   
