видео 22(route exact)

--- a/Social-network/src/components/Dialogs/Dialogs.module.css
+++ b/Social-network/src/components/Dialogs/Dialogs.module.css
@@ -9,7 +9,13 @@
 
 .author {
     margin-bottom: 20px;
+    display: block;
+    text-decoration: none;
 }
+
+.author [aria-current="page"] {
+    color: gold;
+  }
 
 .messages {
     margin: 20px;
