видео 23(props для Диалогов)

--- a/Social-network/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/Social-network/src/components/Profile/MyPosts/MyPosts.module.css
@@ -1,7 +1,13 @@
+.container {
+  margin: 20px;
+}
 
   .input {
     width: 99%;
     height: 60px;
   }
 
-  
+  .buttonLeft {
+    display: flex;
+    justify-content: end;
+  }
